--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = fullstory_api
-version = 0.0.4
+version = 0.1.1
 author = Thinh Vu
 author_email = mrthinh@live.com
 description = Fullstory API Python Client
@@ -14,5 +14,9 @@ classifiers =
 
 [options]
 package_dir = 
+    = fullstory_api
 packages = find:
 python_requires = >=3.7
+
+[options.packages.find]
+where=fullstory_api
