--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = fullstory_api
-version = 0.1.2
+version = 0.1.3
 author = Thinh Vu
 author_email = mrthinh@live.com
 description = Fullstory API Python Client
@@ -14,9 +14,8 @@ classifiers =
 
 [options]
 package_dir = 
-    = fullstory_api
 packages = find:
 python_requires = >=3.7
 
-[options.packages.find]
-where=fullstory_api
+# [options.packages.find]
+# where=fullstory_api
